src/objects/ChildObject__c.object
<CustomObject>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentObject</label>
        <referenceTo>ParentObject__c</referenceTo>
        <relationshipLabel>ChildObjects</relationshipLabel>
        <relationshipName>ChildObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ChildObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ChildObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChildObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>